--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main
       class="container d-flex justify-content-center align-items-center alto-100"
     >
-      <div class="card p-3 rounded-4" style="width: 400px">
+      <div class="card p-3 rounded-4" style="width: 18rem">
         <img
           src="images/image-qr-code.png"
           class="card-img-top rounded-3"
